force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/Janati_RR__Round_Robin_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Round Robin Group Member</label>
    <nameField>
        <displayFormat>RR-{000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>