force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/fields/Janati_RR__Assignment_Active__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Assignment_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assignment Active</label>
    <type>Checkbox</type>
</CustomField>