force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/fields/Janati_RR__Member_Order__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Member_Order__c</fullName>
    <label>Member Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>