force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/fields/Janati_RR__Round_Robin_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Round_Robin_Assignment__c</fullName>
    <label>Round Robin Assignment</label>
    <referenceTo>Janati_RR__Round_Robin_Assignment__c</referenceTo>
    <relationshipName>Round_Robin_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>