force-app/main/default/objects/Janati_RR__Round_Robin_Group_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Janati_RR__Round_Robin_Assignment__c</columns>
    <columns>Janati_RR__User_Rep__c</columns>
    <columns>Janati_RR__Assignment_Active__c</columns>
    <columns>Janati_RR__User_Active__c</columns>
    <columns>Janati_RR__Member_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>